[metadata]
name = gplaycrawler
version = 0.2.1
author = marzzzello
author_email = gplaycrawler@07f.de
description = Crawl the Google PlayStore
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/marzzzello/gplaycrawler
project_urls =
    Bug Tracker = https://gitlab.com/marzzzello/gplaycrawler/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
packages = gplaycrawler
python_requires = >=3.7
include_package_data = True
install_requires =
    coloredlogs
    reprint
    playstoreapi


[options.entry_points]
console_scripts =
    gplaycrawler = gplaycrawler.main:main
